--- a/transformator.ipynb
+++ b/transformator.ipynb
@@ -60,7 +60,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7bdfb4ed110424790ee61bdc88712e4",
+       "model_id": "606adf4ead66428dbb206020459d1e24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BoundedFloatText(value=160.0, description='pixleSize [nm]', max=200.0, step=0.1, style=DescriptionStyle(descri…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "736fefe8c7f448f7a11f507082ccd449",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,20 +89,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "         x [nm]       y [nm]\n",
+      "0  14655.410156  1552.372314\n",
+      "1  14687.700195  1547.363281\n",
+      "2  14696.900391  1537.219727\n",
+      "3  14713.646484  1521.087402\n",
+      "4  14716.166016  1533.052490\n",
       "returning fileName\n",
-      "Dataset loaded from: E:/Lehre/Praktikanten/Trung/beads/locs_right.csv\n"
+      "Dataset loaded from: E:/Lehre/Praktikanten/Trung/190321_5nMRef_15g_300ms_3MHz_5,3_EM50_2_MMStack_Pos0.ome_locs_picked3Origami.hdf5\n"
      ]
     }
    ],
    "source": [
-    "display(widgets.loadDataButton)\n",
+    "display(widgets.pxlSize, widgets.loadDataButton)\n",
     "\n",
     "def readDataSet(event):\n",
     "    widgets.clearOutput()\n",
-    "    display(widgets.loadDataButton)\n",
+    "    display(widgets.pxlSize, widgets.loadDataButton)\n",
     "    locs.browseFile()\n",
     "    locs.updateNames()\n",
-    "    locs.importData()\n",
+    "    locs.importData(widgets.pxlSize.value)\n",
+    "    locs.viewData()\n",
     "    print(\"Dataset loaded from: %s\" % (locs.fileName))\n",
     "    \n",
     "widgets.loadDataButton.on_click(readDataSet)"
@@ -109,23 +130,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7bdfb4ed110424790ee61bdc88712e4",
+       "model_id": "00d4dfffe1be4adabc2c8031f4c4efd6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Button(description='load Dataset', icon='check', style=ButtonStyle(), tooltip='Click me')"
+       "Button(description='load Matrix', icon='check', style=ButtonStyle(), tooltip='Click me')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix loaded from: E:/Lehre/Praktikanten/Trung/beads/locs_right_channel2_matrix.csv\n"
-     ]
     }
    ],
    "source": [
@@ -133,7 +147,7 @@
     "\n",
     "def loadMatrix(event):\n",
     "    widgets.clearOutput()\n",
-    "    display(widgets.loadDataButton)\n",
+    "    display(widgets.loadMatrixButton)\n",
     "    locs.loadMatrix()\n",
     "    \n",
     "widgets.loadMatrixButton.on_click(loadMatrix)"
@@ -154,7 +168,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e9068e7105e450a8a21a7813b875121",
+       "model_id": "0982475ee61940e68a342727dc375950",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d83b6eb31724239b9657eca7e957f71",
+       "model_id": "b0d3545f7f304eb8b73d9ae7f910cfab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,13 +192,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registered dataset written to: E:/Lehre/Praktikanten/Trung/beads\\locs_right_registered.txt\n"
-     ]
     }
    ],
    "source": [
